fix footer z-index

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer-wrapper {
   border-top: 1px solid var(--medium-color);
-  z-index: 9999;
+  z-index: 999;
   position: relative;
   background-color: var(--background);
 }
