--- a/app/assets/stylesheets/layouts/_dashboard.scss
+++ b/app/assets/stylesheets/layouts/_dashboard.scss
@@ -96,4 +96,9 @@
   .sidebar ul {
     display: none;
   }
+  .dashboard section {
+    padding: 30px 0;
+    box-shadow: none;
+    padding-top: 0;
+  }
 }
